--- a/index.html
+++ b/index.html
@@ -5,200 +5,214 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Search Hub</title>
     <link rel="icon" type="image/png" href="https://img.freepik.com/premium-photo/3d-ai-search-engine-illustration_541443-4396.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
+        :root {
+            --primary: #6366f1;
+            --primary-hover: #4f46e5;
+            --background: #f8fafc;
+            --surface: #ffffff;
+            --text: #1e293b;
+            --border: #e2e8f0;
+        }
+
+        * {
+            box-sizing: border-box;
             margin: 0;
-            padding: 2rem;
-            background-color: #FFFFFF; /* White background */
-            line-height: 1.5;
+            padding: 0;
+        }
+
+        body {
+            font-family: 'Inter', system-ui, -apple-system, sans-serif;
+            background: var(--background);
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            color: #000000; /* Black text */
-            user-select: none; /* Disable selection for all elements */
+            padding: 1rem;
+            color: var(--text);
         }
 
         .search-container {
-            background: #F4F4F4; /* Light gray background */
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background: var(--surface);
+            padding: 2.5rem;
+            border-radius: 1.5rem;
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+                        0 8px 10px -6px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 500px;
-            text-align: center;
-            user-select: auto; /* Allow selection only for the input */
+            max-width: 560px;
+            transition: transform 0.2s ease;
+        }
+
+        .search-container:hover {
+            transform: translateY(-2px);
         }
 
         h1 {
-            color: #007AFF; /* Blue color */
-            margin-bottom: 1.5rem;
-            font-size: 2.5rem;
-            font-weight: 600;
+            text-align: center;
+            font-size: 2rem;
+            font-weight: 700;
+            background: linear-gradient(45deg, #6366f1, #8b5cf6);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            margin-bottom: 2rem;
         }
 
         .search-group {
-            margin-bottom: 1.5rem;
+            position: relative;
+            margin-bottom: 2rem;
         }
 
         .search-input {
             width: 100%;
-            padding: 0.75rem 1.5rem;
-            padding-right: 3rem;
-            border: 2px solid #5D5D5D; /* Medium gray for borders */
-            border-radius: 24px;
-            font-size: 1.125rem;
-            transition: all 0.2s;
-            box-sizing: border-box;
-            outline: none;
+            padding: 1rem 1.5rem;
+            border: 2px solid var(--border);
+            border-radius: 1rem;
+            font-size: 1rem;
+            transition: all 0.2s ease;
+            background: var(--surface);
+            color: var(--text);
+            padding-right: 3.5rem;
         }
 
         .search-input:focus {
-            border-color: #007AFF; /* Blue on focus */
-            box-shadow: 0 0 0 3px rgba(0, 122, 255, 0.2);
-        }
-
-        .option-group {
-            margin-bottom: 1.5rem;
-            text-align: center;
-        }
-
-        .checkbox-wrapper {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            user-select: auto; /* Allow checkbox label selection */
-        }
-
-        .checkbox-input {
-            width: 1.25rem;
-            height: 1.25rem;
-            border-radius: 4px;
-            border: 2px solid #5D5D5D; /* Medium gray for checkboxes */
-            cursor: pointer;
-        }
-
-        .search-button {
-            display: block;
-            padding: 0.75rem 1.5rem;
-            background-color: #007AFF; /* Blue background */
-            color: white;
-            border: none;
-            border-radius: 24px;
-            font-size: 1.125rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: background-color 0.2s;
-            margin: 0 auto;
-            width: 100%;
-            max-width: 250px;
-        }
-
-        .search-button:hover {
-            background-color: #005BB5; /* Darker blue on hover */
-        }
-
-        .search-button:active {
-            background-color: #004A91; /* Even darker blue on active */
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.15);
         }
 
         .search-input::placeholder {
-            color: #5D5D5D; /* Medium gray for placeholder */
+            color: #94a3b8;
         }
 
-        @media (max-width: 640px) {
-            body {
-                padding: 1rem;
-            }
+        .options-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 1rem;
+            margin-bottom: 2rem;
+        }
 
+        .checkbox-wrapper {
+            position: relative;
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            padding: 0.75rem;
+            border-radius: 0.75rem;
+            background: var(--background);
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .checkbox-wrapper:hover {
+            background: #f1f5f9;
+        }
+
+        .checkbox-input {
+            appearance: none;
+            width: 1.25rem;
+            height: 1.25rem;
+            border: 2px solid var(--border);
+            border-radius: 0.375rem;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .checkbox-input:checked {
+            background: var(--primary);
+            border-color: var(--primary);
+        }
+
+        .checkbox-input:checked::after {
+            content: "✓";
+            display: block;
+            color: white;
+            text-align: center;
+            line-height: 1.25rem;
+            font-size: 0.875rem;
+        }
+
+        .search-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.5rem;
+            width: 100%;
+            padding: 1rem;
+            border: none;
+            border-radius: 1rem;
+            background: linear-gradient(45deg, #6366f1, #8b5cf6);
+            color: white;
+            font-size: 1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .search-button:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 5px 15px rgba(99, 102, 241, 0.3);
+        }
+
+        .search-button:active {
+            transform: translateY(0);
+        }
+
+        @media (max-width: 480px) {
             .search-container {
                 padding: 1.5rem;
+                border-radius: 1rem;
+            }
+
+            .options-grid {
+                grid-template-columns: repeat(2, 1fr);
             }
         }
     </style>
 </head>
 <body>
     <div class="search-container">
-        <h1>Search</h1>
+        <h1>AI Search Hub</h1>
         <form onsubmit="event.preventDefault(); performSearch();">
             <div class="search-group">
                 <input 
                     type="text" 
                     id="searchQuery" 
-                    name="searchQuery" 
                     class="search-input"
-                    placeholder="Enter your search query..."
+                    placeholder="Ask me anything..."
                     required
                     autocomplete="off"
                     autofocus
                 >
             </div>
 
-            <div class="option-group">
-                <!-- ChatGPT Checkbox -->
-                <div class="checkbox-wrapper">
-                    <input 
-                        type="checkbox" 
-                        id="chatgpt" 
-                        name="chatgpt" 
-                        class="checkbox-input"
-                        checked
-                    >
-                    <label for="chatgpt">ChatGPT</label>
-                </div>
-
-                <!-- Claude Checkbox -->
-                <div class="checkbox-wrapper">
-                    <input 
-                        type="checkbox" 
-                        id="claude" 
-                        name="claude" 
-                        class="checkbox-input"
-                        checked
-                    >
-                    <label for="claude">Claude</label>
-                </div>
-
-                <!-- Mistral Checkbox -->
-                <div class="checkbox-wrapper">
-                    <input 
-                        type="checkbox" 
-                        id="mistral" 
-                        name="mistral" 
-                        class="checkbox-input"
-                        checked
-                    >
-                    <label for="mistral">Mistral</label>
-                </div>
-
-                <!-- Copilot Checkbox -->
-                <div class="checkbox-wrapper">
-                    <input 
-                        type="checkbox" 
-                        id="copilot" 
-                        name="copilot" 
-                        class="checkbox-input"
-                        checked
-                    >
-                    <label for="copilot">Copilot</label>
-                </div>
-
-                <!-- Google Checkbox -->
-                <div class="checkbox-wrapper">
-                    <input 
-                        type="checkbox" 
-                        id="google" 
-                        name="google" 
-                        class="checkbox-input"
-                        checked
-                    >
-                    <label for="google">Google</label>
-                </div>
+            <div class="options-grid">
+                <label class="checkbox-wrapper">
+                    <input type="checkbox" id="chatgpt" class="checkbox-input" checked>
+                    <span>ChatGPT</span>
+                </label>
+                <label class="checkbox-wrapper">
+                    <input type="checkbox" id="claude" class="checkbox-input" checked>
+                    <span>Claude</span>
+                </label>
+                <label class="checkbox-wrapper">
+                    <input type="checkbox" id="mistral" class="checkbox-input" checked>
+                    <span>Mistral</span>
+                </label>
+                <label class="checkbox-wrapper">
+                    <input type="checkbox" id="copilot" class="checkbox-input" checked>
+                    <span>Copilot</span>
+                </label>
+                <label class="checkbox-wrapper">
+                    <input type="checkbox" id="google" class="checkbox-input" checked>
+                    <span>Google</span>
+                </label>
             </div>
 
             <button type="submit" class="search-button">
-                Search
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
+                Search Now
             </button>
         </form>
     </div>
@@ -206,32 +220,19 @@
     <script>
         function performSearch() {
             const query = document.getElementById('searchQuery').value;
-            const chatgpt = document.getElementById('chatgpt').checked;
-            const claude = document.getElementById('claude').checked;
-            const mistral = document.getElementById('mistral').checked;
-            const google = document.getElementById('google').checked;
-            const copilot = document.getElementById('copilot').checked;
-            
-            // Open a new tab for each selected checkbox
-            if (chatgpt) {
-                window.open(`https://chat.openai.com/?q=${encodeURIComponent(query)}`, '_blank');
-            }
+            const engines = {
+                chatgpt: `https://chat.openai.com/?q=${encodeURIComponent(query)}`,
+                claude: `https://claude.ai/new?q=${encodeURIComponent(query)}`,
+                mistral: `https://chat.mistral.ai/chat?q=${encodeURIComponent(query)}`,
+                copilot: `https://copilot.microsoft.com/?q=${encodeURIComponent(query)}`,
+                google: `https://www.google.com/search?q=${encodeURIComponent(query)}`
+            };
 
-            if (claude) {
-                window.open(`https://claude.ai/new?q=${encodeURIComponent(query)}`, '_blank');
-            }
-
-            if (mistral) {
-                window.open(`https://chat.mistral.ai/chat?q=${encodeURIComponent(query)}`, '_blank');
-            }
-
-            if (copilot) {
-                window.open(`https://copilot.microsoft.com/?q=${encodeURIComponent(query)}`, '_blank');
-            }
-
-            if (google) {
-                window.open(`https://www.google.com/search?q=${encodeURIComponent(query)}`, '_blank');
-            }
+            Object.entries(engines).forEach(([id, url]) => {
+                if (document.getElementById(id).checked) {
+                    window.open(url, '_blank');
+                }
+            });
         }
     </script>
 </body>
